# RESTAPI-ToDoApp-RaspyGUI

./: .gitattributes  .gitignore  README.md
API/: CMakeLists.txt  main.cpp
API/Middleware/: Middleware.cpp  Middleware.h
API/constants/: HttpStatus.h  JsonF.h  JsonUtils.cpp
API/routes/: Routes.cpp  Routes.h
API/tasks/: ListManager.cpp  ListManager.h  Task.h  TaskList.cpp  TaskList.h
RaspyGUI/: src.py
ToDoApp/: package-lock.json  package.json
ToDoApp/app/: index.tsx  types.ts
ToDoApp/components/animated/: deleteTick.json
ToDoApp/components/buttons/: arrowLeft.tsx  arrowRight.tsx  doneTick.tsx  menuButton.tsx  plusIcon.tsx
ToDoApp/components/listIcons/: sample.tsx
ToDoApp/components/popUps/: addPopUp.tsx
ToDoApp/components/screens/: ListScreen.tsx
ToDoApp/functions/: requests.ts
